--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@headlessui/react": "1.7.19",
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/postcss": "latest",
     "@tailwindcss/typography": "^0.5.12",
-    "autoprefixer": "^10.4.13",
     "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
@@ -42,7 +42,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "latest",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -59,7 +59,7 @@
     "husky": "^9.0.0",
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-tailwindcss": "latest",
     "typescript": "^5.1.3"
   },
   "lint-staged": {
